--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "gulp-webserver": "^0.9.1",
     "http-proxy-middleware": "^0.19.0",
     "string-loader": "^0.0.1",
-    "webpack-stream": "^5.1.1"
+    "webpack-stream": "^5.1.1",
+    "json-server": "^0.14.0"
   },
   "scripts": {
     "dev": "gulp",
-    "start": "npm run dev"
+    "mock": "json-server ./src/static/mock/mock.js -r ./src/static/mock/routes.json",
+    "start": "concurrently \"npm run mock\"  \"npm run dev\""
   },
   "dependencies": {
-    "global": "^4.3.2",
-    "json-server": "^0.14.0"
+   
   }
 }
