--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime": "^7.1.2",
     "babel-loader": "^8.0.4",
+    "better-scroll": "^1.13.2",
     "concurrently": "^4.0.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -17,16 +18,14 @@
     "gulp-watch": "^5.0.1",
     "gulp-webserver": "^0.9.1",
     "http-proxy-middleware": "^0.19.0",
+    "json-server": "^0.14.0",
     "string-loader": "^0.0.1",
-    "webpack-stream": "^5.1.1",
-    "json-server": "^0.14.0"
+    "webpack-stream": "^5.1.1"
   },
   "scripts": {
     "dev": "gulp",
     "mock": "json-server ./src/static/mock/mock.js -r ./src/static/mock/routes.json",
     "start": "concurrently \"npm run mock\"  \"npm run dev\""
   },
-  "dependencies": {
-   
-  }
+  "dependencies": {}
 }
