--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "gulp-watch": "^5.0.1",
     "gulp-webserver": "^0.9.1",
     "http-proxy-middleware": "^0.19.0",
-    "json-server": "^0.14.0",
     "string-loader": "^0.0.1",
-    "webpack-stream": "^5.1.1"
+    "webpack-stream": "^5.1.1",
+    "json-server": "^0.14.0"
   },
   "scripts": {
     "dev": "gulp",
